# nixie_clock

./: .gitmodules  README.md  nixie_clock.lib
firmware/: CMakeLists.txt  LICENSE  README.md  pinout.txt
firmware/include/: clock_mode.hpp  common.h  config.hpp  console.hpp  ee24.hpp  main.h  nixie.hpp  rtc.hpp  stm32f0xx_hal_conf.h  stm32f0xx_it.h
firmware/src/: clock_mode.cpp  common.c  config.cpp  console.cpp  ee24.cpp  main.cpp  nixie.cpp  rtc.cpp  startup_stm32f072xb.s  stm32f0xx_hal_msp.c  stm32f0xx_it.c  system_stm32f0xx.c
nixie_clock.pretty/: DS3231_Connector.kicad_mod  otterpill.kicad_mod
nixie_holder/gerber/: nixie_clock_holder-B_Cu.gbl  nixie_clock_holder-B_Mask.gbs  nixie_clock_holder-B_Paste.gbp  nixie_clock_holder-B_SilkS.gbo  nixie_clock_holder-Edge_Cuts.gm1  nixie_clock_holder-F_Cu.gtl  nixie_clock_holder-F_Mask.gts  nixie_clock_holder-F_Paste.gtp  nixie_clock_holder-F_SilkS.gto  nixie_clock_holder-NPTH-drl_map.ps  nixie_clock_holder-NPTH.drl  nixie_clock_holder-PTH-drl_map.ps  nixie_clock_holder-PTH.drl  nixie_clock_holder-drl_map.gbr  nixie_clock_holder-drl_map.ps  nixie_clock_holder-job.gbrjob  nixie_clock_holder.drl
